tests/sqlcmd/baselines/errors/start_session2.errbaseline
Unable to connect to VoltDB cluster
